# git-gdrive-remote

./: LICENSE  main.py  pyproject.toml
src/: app.py  google_drive_remote.py  utils.py
tests/: test_app.py  test_utils.py
